<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item  android:id="@+id/menu_configuration"
           android:title="Configuration"/>
    <item  android:id="@+id/menu_about"
           android:title="About"/>
</menu>