<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="new_message_open_application"
        android:title="@string/pref_title_new_message_open_application" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_new_message"
        android:title="@string/pref_title_new_message_notifications" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_alert"
        android:title="@string/pref_title_alert_notifications" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_vibrate"
        android:title="@string/pref_title_alert_vibrate" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notifications_new_message"
        android:key="notifications_new_message_ringtone"
        android:ringtoneType="alarm"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!--<SwitchPreference-->
        <!--android:defaultValue="true"-->
        <!--android:dependency="notifications_new_message"-->
        <!--android:key="notifications_new_message_vibrate"-->
        <!--android:title="@string/pref_title_vibrate" />-->

</PreferenceScreen>
